fixed scroll shiftin problem

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@ header {
 	z-index: 20000;
 }
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 body {
 	background: linear-gradient(
@@ -18,4 +18,13 @@ body {
 		rgb(67, 0, 70) 60%,
 		rgba(0, 0, 0, 0) 100%
 	);
+}
+
+html:has(dialog[open]) {
+	padding-right: 17px;
+	overflow: hidden;
+	--canvaspadding:17px;
+}
+#three-canvas-container {
+	right:var(--canvaspadding,0)!important;
 }
